--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "cardinal": "^0.5.0",
     "chalk": "^1.1.1",
+    "cli-table": "^0.3.1",
     "get-stdin": "^5.0.0",
     "indent-string": "^2.1.0",
     "marked": "^0.3.5",
