--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
     "cli-table": "^0.3.1",
     "get-stdin": "^5.0.0",
     "indent-string": "^2.1.0",
+    "lodash.flow": "^3.2.1",
+    "lodash.trimleft": "^3.0.2",
+    "lodash.trimright": "^3.0.2",
+    "lodash.unescape": "^3.0.0",
     "marked": "^0.3.5",
     "meow": "^3.4.2",
     "node-emoji": "^1.0.3",
