--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "markdown-cli": "cli.js"
   },
   "scripts": {
-    "test": "ava",
-    "lint": "xo"
+    "test": "nyc ava",
+    "lint": "xo",
+    "coverage": "nyc report --reporter=text-lcov | coveralls"
   },
   "engines": {
     "node": ">=4"
@@ -57,6 +58,8 @@
   },
   "devDependencies": {
     "ava": "^0.2.0",
+    "coveralls": "^2.11.4",
+    "nyc": "^3.2.2",
     "xo": "^0.9.0"
   },
   "xo": {
