--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "test": "nyc ava",
     "lint": "xo",
-    "coverage": "nyc report --reporter=text-lcov | ./node_modules/coveralls/bin/coveralls.js"
+    "coveralls": "nyc report --reporter=text-lcov | ./node_modules/coveralls/bin/coveralls.js"
   },
   "engines": {
     "node": ">=4"
